--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sunspikes/clamav-validator",
-    "description": "Custom Laravel 5 anti-virus validator for file uploads.",
+    "description": "Custom Laravel anti-virus validator for file uploads.",
     "keywords": [
         "laravel",
         "validator",
@@ -16,15 +16,15 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "xenolope/quahog": "2.*",
-        "illuminate/support": "~5.0 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/validation": "~5.0 || ^6.0 || ^7.0 || ^8.0"
+        "php": "^7.2|^8.0",
+        "xenolope/quahog": "^2.1",
+        "illuminate/support": "^6.0 || ^8.0 || ^9.0",
+        "illuminate/validation": "^6.0 || ^8.0 || ^9.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "phpunit/phpunit": "4.*",
-        "mockery/mockery": "1.2.*",
+        "phpunit/phpunit": "^8.5.8|^9.5.10",
+        "mockery/mockery": "^1.2",
         "scrutinizer/ocular": "dev-master"
     },
     "autoload": {
